# HaproxyAutoconfd-rust

./: Cargo.toml  Docker-Compose.yml  Dockerfile  README.md
.github/workflows/: main.yml
example/: localhost-selfsigned.pem
example/haproxy.inbox/: 000-base.cfg  000-preamble.cfg
src/: child.rs  config.rs  fsext.rs  main.rs
src/events/: child.rs  directory.rs  mod.rs  signals.rs
